# py-friendly-words

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: development.yml  python-publish.yml  release.yml  test.yml
friendlywords/: __init__.py  friendlywords.py
friendlywords/data/: objects.txt  predicates.txt  teams.txt
test/: test_friendlywords.py
tests/: test_friendlywords.py
