[metadata]
name = friendlywords
version = attr: friendlywords.__version__
description = Python package to generate random human-readable strings, e.g. project and experiment names
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/the-lay/py-friendly-words
author = the-lay
author_email = ilja.gubin@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
project_urls =
    Source = https://github.com/the-lay/py-friendly-words
    Issues = https://github.com/the-lay/py-friendly-words/issues

[options]
include_package_data = True
packages = find:
platforms = any
python_requires = >= 3.6
